Spotify for Dance page

--- a/DanceCalc/m4d/Views/Dance/Details.cshtml
+++ b/DanceCalc/m4d/Views/Dance/Details.cshtml
@@ -1,4 +1,5 @@
-﻿@model m4dModels.SongCounts
+﻿@using System.Text
+@model m4dModels.SongCounts
 
 @{
     ViewBag.Title = Model.DanceName + " Information, Top Ten List, and Resources.";
@@ -41,6 +42,10 @@
 </div>
 <div>
     @{Html.RenderPartial("_ListSongs", @Model.TopSongs, ViewData);}
+</div>
+
+<div>
+    <iframe src="https://embed.spotify.com/?uri=spotify:trackset:@Model.DanceName:@Model.TopSpotify" frameborder="0" allowtransparency="true"></iframe>
 </div>
 
 <div>
