--- a/DanceCalc/m4d/Views/Song/Index.cshtml
+++ b/DanceCalc/m4d/Views/Song/Index.cshtml
@@ -48,73 +48,73 @@
 
     <div class="row">
         <div class="col-xs-12">
-    <div class="input-group" style="margin-top:10px">
-        <div class="input-group-btn search-panel">
-            <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown">
-                <span id="dance_selector">@danceName</span> <span class="caret"></span>
-            </button>
-            <ul class="dropdown-menu" role="menu">
-                <li id="DID_ALL"><a href="#ALL"><strong>All Dances</strong></a></li>
-                @foreach (var sc in dances.OrderBy(x => x.DanceName))
-                {
-                    string id = "DID_" + sc.DanceId;
-                    string href = "#" + sc.DanceId;
-                    <li id="@id"><a href=@href><strong>@sc.DanceName</strong></a></li>
-                    foreach (var sci in sc.Children.OrderBy(x => x.DanceName))
-                    {
-                        if (sci.SongCount > 0)
+            <div class="input-group" style="margin-top:10px">
+                <div class="input-group-btn search-panel">
+                    <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown">
+                        <span id="dance_selector">@danceName</span> <span class="caret"></span>
+                    </button>
+                    <ul class="dropdown-menu" role="menu">
+                        <li id="DID_ALL"><a href="#ALL"><strong>All Dances</strong></a></li>
+                        @foreach (var sc in dances.OrderBy(x => x.DanceName))
                         {
-                            id = "DID_" + sci.DanceId;
-                            href = "#" + sci.DanceId;
-                            <li id="@id"><a href=@href><small>&nbsp;@sci.DanceName</small></a></li>
+                            string id = "DID_" + sc.DanceId;
+                            string href = "#" + sc.DanceId;
+                            <li id="@id"><a href=@href><strong>@sc.DanceName</strong></a></li>
+                            foreach (var sci in sc.Children.OrderBy(x => x.DanceName))
+                            {
+                                if (sci.SongCount > 0)
+                                {
+                                    id = "DID_" + sci.DanceId;
+                                    href = "#" + sci.DanceId;
+                                    <li id="@id"><a href=@href><small>&nbsp;@sci.DanceName</small></a></li>
+                                }
+                            }
                         }
-                    }
-                }
-            </ul>
-        </div>
-        <input type="hidden" name="dances" id="dances" value="@danceID" />
-        <input type="hidden" name="filter" id="filter" value="@ViewBag.SongFilter.ToString()" />
-        @Html.TextBox("SearchString", ViewBag.SongFilter.SearchString as string, new { @class = "form-control search-text", placeholder = "Artist, Title, or Album" })
-        <span class="input-group-btn">
-            <button id="submit-search" class="btn btn-default" type="submit"><span class="glyphicon glyphicon-search"></span></button>
-        </span>
-    </div>
+                    </ul>
+                </div>
+                <input type="hidden" name="dances" id="dances" value="@danceID" />
+                <input type="hidden" name="filter" id="filter" value="@ViewBag.SongFilter.ToString()" />
+                @Html.TextBox("SearchString", ViewBag.SongFilter.SearchString as string, new { @class = "form-control search-text", placeholder = "Artist, Title, or Album" })
+                <span class="input-group-btn">
+                    <button id="submit-search" class="btn btn-default" type="submit"><span class="glyphicon glyphicon-search"></span></button>
+                </span>
+            </div>
         </div>
     </div>
     <div class="row">
         <div class="col-xs-12">
             <div id="AdvancedSearch" class="input-group">
-        <div class="input-group">
-            Include only song available on:
-            <label>
-                <input type="checkbox" name="services" id="serviceX" value="X" @checkX />
-                XBox
-            </label>
-            <label>
-                <input type="checkbox" name="services" id="serviceA" value="A" @checkA />
-                Amazon
-            </label>
-            <label>
-                <input type="checkbox" name="services" id="serviceI" value="I" @checkI />
-                ITunes
-            </label>
-            <label>
-                <input type="checkbox" name="services" id="serviceS" value="S" @checkI />
-                Spotify
-            </label>
-       </div>
+                <div class="input-group">
+                    Include only song available on:
+                    <label>
+                        <input type="checkbox" name="services" id="serviceX" value="X" @checkX />
+                        XBox
+                    </label>
+                    <label>
+                        <input type="checkbox" name="services" id="serviceA" value="A" @checkA />
+                        Amazon
+                    </label>
+                    <label>
+                        <input type="checkbox" name="services" id="serviceI" value="I" @checkI />
+                        ITunes
+                    </label>
+                    <label>
+                        <input type="checkbox" name="services" id="serviceS" value="S" @checkI />
+                        Spotify
+                    </label>
+                </div>
 
-        <div class="input-group">
-            Tempo between @Html.TextBox("TempoMin", ViewBag.SongFilter.TempoMin as decimal?, new { @class = "input-small" })&nbsp;and&nbsp;
-            @Html.TextBox("TempoMax", ViewBag.SongFilter.TempoMax as decimal?, new { @class = "input-small" }) &nbsp;BPM
-        </div>
-    </div>
+                <div class="input-group">
+                    Tempo between @Html.TextBox("TempoMin", ViewBag.SongFilter.TempoMin as decimal?, new { @class = "input-small" })&nbsp;and&nbsp;
+                    @Html.TextBox("TempoMax", ViewBag.SongFilter.TempoMax as decimal?, new { @class = "input-small" }) &nbsp;BPM
+                </div>
+            </div>
         </div>
     </div>
 }
 <div class="row">
     <div class="col-md-12">
-<a id="ToggleAdvanced" href="#" class="btn btn-info btn-xs btn-block" style="margin-top:5px">&nbsp;</a>
+        <a id="ToggleAdvanced" href="#" class="btn btn-info btn-xs btn-block" style="margin-top:5px">&nbsp;</a>
     </div>
 </div>
 
@@ -135,10 +135,10 @@
             @Html.ActionLink("ITunes Batch", "BatchMusicService", new { filter = ViewBag.SongFilter, type = "I", count = 10 }, new { @class = "btn btn-success", role = "button" })
             @Html.ActionLink("Spotify Batch", "BatchMusicService", new { filter = ViewBag.SongFilter, type = "S", count = 10 }, new { @class = "btn btn-success", role = "button" })
             @Html.ActionLink("Amazon Batch", "BatchMusicService", new { filter = ViewBag.SongFilter, type = "A", count = 10 }, new { @class = "btn btn-success", role = "button" })
-            @Html.ActionLink("Canonical Batch", "BatchMusicService", new { filter = ViewBag.SongFilter, type = "-", count = 10, options="M" }, new { @class = "btn btn-success", role = "button" })
+            @Html.ActionLink("Canonical Batch", "BatchMusicService", new { filter = ViewBag.SongFilter, type = "-", count = 10, options = "M" }, new { @class = "btn btn-success", role = "button" })
             @*@Html.ActionLink("XBox Batch", "BatchMusicService", new { filter = ViewBag.SongFilter, type = "X", count = 10, options = "R1" }, new { @class = "btn btn-success", role = "button" });
-            @Html.ActionLink("ITunes Batch", "BatchMusicService", new { filter = ViewBag.SongFilter, type = "I", count = 10, options = "R1" }, new { @class = "btn btn-success", role = "button" });
-            @Html.ActionLink("Amazon Batch", "BatchMusicService", new { filter = ViewBag.SongFilter, type = "A", count = 10, options = "R1" }, new { @class = "btn btn-success", role = "button" });*@
+                @Html.ActionLink("ITunes Batch", "BatchMusicService", new { filter = ViewBag.SongFilter, type = "I", count = 10, options = "R1" }, new { @class = "btn btn-success", role = "button" });
+                @Html.ActionLink("Amazon Batch", "BatchMusicService", new { filter = ViewBag.SongFilter, type = "A", count = 10, options = "R1" }, new { @class = "btn btn-success", role = "button" });*@
         </div>
     }
 }
@@ -162,7 +162,16 @@
     </div>
 </div>
 
-@section Scripts 
+@if (!string.IsNullOrWhiteSpace(ViewBag.Spotify))
+{
+<div class="row">
+    <div class="col-md-8">
+        <iframe src="https://embed.spotify.com/?uri=spotify:trackset:music4dance:@ViewBag.Spotify" frameborder="0" allowtransparency="true"></iframe>
+    </div>
+</div>
+}
+
+@section Scripts
 {
     @{
         if (ViewData.ContainsKey("SongFilter") && ViewBag.SongFilter.Advanced)
