--- a/DanceCalc/m4d/Views/Admin/ReviewBatch.cshtml
+++ b/DanceCalc/m4d/Views/Admin/ReviewBatch.cshtml
@@ -38,7 +38,7 @@
         <tr>
             <td>
                 @{
-                    string color = null;
+                    string color;
                     if (item.Conflict)
                     {
                         color = "red";
