--- a/DanceCalc/m4d/Views/ApplicationUsers/Index.cshtml
+++ b/DanceCalc/m4d/Views/ApplicationUsers/Index.cshtml
@@ -1,5 +1,4 @@
-﻿@using Microsoft.AspNet.Identity
-@model ApplicationUserManager
+﻿@model ApplicationUserManager
 
 @{
     ViewBag.Title = "Index";
