--- a/DanceCalc/m4d/Content/Site.css
+++ b/DanceCalc/m4d/Content/Site.css
@@ -147,7 +147,7 @@ table.songlist
 .navbar-logo {
   float: left;
   height: 50px;
-  padding: 0px 30px 0px 0px;
+  padding: 0 30px 0 0;
   font-size: 18px;
   line-height: 20px;
 }
