--- a/DanceCalc/m4d/Views/Account/ExternalLoginConfirmation.cshtml
+++ b/DanceCalc/m4d/Views/Account/ExternalLoginConfirmation.cshtml
@@ -5,6 +5,7 @@
 <h2>@ViewBag.Title.</h2>
 <h3>Associate your @ViewBag.LoginProvider account.</h3>
 
+@* ReSharper disable once RedundantAnonymousTypePropertyName *@
 @using (Html.BeginForm("ExternalLoginConfirmation", "Account", new { ReturnUrl = ViewBag.ReturnUrl }, FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
 {
     bool showEmail = string.IsNullOrWhiteSpace(@Model.Email) || !string.IsNullOrWhiteSpace(@Html.ValidationMessageFor(m => m.UserName, "", new { @class = "text-danger" }).ToString());
