--- a/DanceCalc/m4d/Views/Account/Login.cshtml
+++ b/DanceCalc/m4d/Views/Account/Login.cshtml
@@ -8,6 +8,7 @@
 <div class="row">
     <div class="col-md-8">
         <section id="loginForm">
+            @* ReSharper disable once RedundantAnonymousTypePropertyName *@
             @using (Html.BeginForm("Login", "Account", new { ReturnUrl = ViewBag.ReturnUrl }, FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
             {
                 @Html.AntiForgeryToken()
