--- a/DanceCalc/m4d/Views/Account/VerifyCode.cshtml
+++ b/DanceCalc/m4d/Views/Account/VerifyCode.cshtml
@@ -5,6 +5,7 @@
 
 <h2>@ViewBag.Title.</h2>
 
+@* ReSharper disable once RedundantAnonymousTypePropertyName *@
 @using (Html.BeginForm("VerifyCode", "Account", new { ReturnUrl = Model.ReturnUrl }, FormMethod.Post, new { @class = "form-horizontal", role = "form" })) {
     @Html.AntiForgeryToken()
     @Html.Hidden("provider", @Model.Provider)
