--- a/DanceCalc/m4d/Views/Song/Edit.cshtml
+++ b/DanceCalc/m4d/Views/Song/Edit.cshtml
@@ -18,7 +18,7 @@
 @if (ViewData.ContainsKey("Errors"))
 {
     <div>
-        @foreach (System.Exception error in ViewBag.Errors)
+        @foreach (Exception error in ViewBag.Errors)
         {
             <p>@error.Message</p>
         }
