Show compound tracks correctly in albums details page

--- a/DanceCalc/m4d/Views/Song/AlbumDetails.cshtml
+++ b/DanceCalc/m4d/Views/Song/AlbumDetails.cshtml
@@ -8,11 +8,8 @@
 </div>
 @if (Model.Track != null)
 {
-    <div class="display-label">
-        Track:
-    </div>
     <div class="display-field">
-        @Model.Track
+        @Model.FormattedTrack
     </div>
 }
 @if (Model.Publisher != null)
