Get play links to work on tags pages

--- a/DanceCalc/m4d/Views/Song/Tags.cshtml
+++ b/DanceCalc/m4d/Views/Song/Tags.cshtml
@@ -40,3 +40,8 @@
         (@Model.TotalItemCount songs found.)
     </div>
 </div>
+
+@section Scripts
+{
+    <script src='@Url.Content("~/Scripts/musicservice.js" + Page.ScriptQualifier)' type='text/javascript'></script>
+}
