Create a site map page

--- a/DanceCalc/m4d/Views/Home/Contact.cshtml
+++ b/DanceCalc/m4d/Views/Home/Contact.cshtml
@@ -2,12 +2,12 @@
     ViewBag.Title = "Contact";
 }
 <h2>@ViewBag.Title.</h2>
-<h3>@ViewBag.Message</h3>
 
 <address>
-    Seattle, WA
+    500 Yale Avenue North
+    Seattle, WA 98109
 </address>
 
 <address>
-    <strong>Support:</strong><a href="mailto:david@music4dance.net">support@music4dance.net</a><br />
+    <strong>Support:</strong><a href="mailto:david@music4dance.net">david@music4dance.net</a><br />
 </address>
