Clean up song page visuals in prep for tagging

--- a/DanceCalc/m4d/Content/Site.css
+++ b/DanceCalc/m4d/Content/Site.css
@@ -161,6 +161,14 @@ table.songlist
     max-width:90%;
 }
 
+.rating-block {
+    white-space: nowrap;
+}
+
+.rating-block:before {
+    display: inline;
+}
+
 .rating {
     white-space: nowrap;
     display: inline;
