--- a/DanceCalc/m4d/Views/Song/DetailsCore.cshtml
+++ b/DanceCalc/m4d/Views/Song/DetailsCore.cshtml
@@ -5,6 +5,10 @@
     var danceTags = new HashSet<string>();
 }
 
+<div class="page-header">
+    <h1>@Model.Title <small>by @Html.ActionLink(Model.Artist, "search", "song", new { searchString = Model.Artist, dances = "ALL" }, null)</small></h1>
+</div>
+
 <div class="row">
     <div class="col-md-12">
         <div class="hidden-xs">
@@ -25,69 +29,55 @@
 </div>
 
 <div class="row">
-    <fieldset class="col-md-12">
-        <div class="display-label">
-            @Html.DisplayNameFor(model => model.Artist):
-        </div>
-        <div class="display-field">
-            @if (!string.IsNullOrWhiteSpace(Model.Artist))
+    <fieldset>
+        <div class="col-sm-2">
+            @if (Model.Tempo != null)
             {
-                @Html.ActionLink(Model.Artist, "search", "song", new { searchString = Model.Artist, dances = "ALL" }, null)
+                <div class="display-label">
+                    @Html.DisplayNameFor(model => model.Tempo):
+                </div>
+                <div class="display-field">
+                    @decimal.Round(Model.Tempo.Value).ToString("F0") BPM
+                </div>
+                <br/>
             }
         </div>
-        <br />
-
-        @if (Model.Tempo != null)
-        {
-            <div class="display-label">
-                @Html.DisplayNameFor(model => model.Tempo):
-            </div>
-            <div class="display-field">
-                @decimal.Round(Model.Tempo.Value).ToString("F0") BPM
-            </div>
-            <br />
-        }
-
-        @if (Model.Length != null)
-        {
-            <div class="display-label">
-                @Html.DisplayNameFor(model => model.Length):
-            </div>
-            <div class="display-field">
-                @Html.DisplayFor(model => model.Length, "SongDuration")
-            </div>
-            <br />
-        }
-    </fieldset>
+        <div class="col-sm-2">
+            @if (Model.Length != null)
+            {
+                <div class="display-label">
+                    @Html.DisplayNameFor(model => model.Length):
+                </div>
+                <div class="display-field">
+                    @Html.DisplayFor(model => model.Length, "SongDuration")
+                </div>
+                <br />
+            }
+        </div>
+</fieldset>
 </div>
 
 @if (Model.TagSummary.Tags.Count != 0)
 {
     <div class="row">
         <div class="col-md-12">
+            <h4>
             @{
-            var separator = "";
-            <div class="display-label">
-                Tags:
-            </div>
-            <div class="display-field">
-            @foreach (var item in Model.TagSummary.Tags)
-            {
-                var rg = item.Value.Split(':');
-                if (rg[1] == "Dance")
+                foreach (var item in Model.TagSummary.Tags)
                 {
-                    danceTags.Add(rg[0].ToLower());
-                }
-                else
-                {
-                    var label = rg[1] == "Music" ? "primary" : "info";
-                    @separator;
-                    @Html.ActionLink(rg[0], "tags", "song", new { tags = item.Value }, new { @class = "label label-" + label })
-                    separator = " ";
+                    var rg = item.Value.Split(':');
+                    if (rg[1] == "Dance")
+                    {
+                        danceTags.Add(rg[0].ToLower());
+                    }
+                    else
+                    {
+                        var label = rg[1] == "Music" ? "primary" : "info";
+                        @Html.ActionLink(rg[0], "tags", "song", new {tags = item.Value}, new {@class = "label label-" + label})
+                    }
                 }
             }
-            </div>
-            }
+            </h4>
         </div>
     </div>
 }
@@ -95,25 +85,23 @@
 @if (Model.DanceRatings != null)
 {
     <div class="row">
-        <div class="col-md-12" style="padding-top:5px">
-            @{
-                var separator = "";
-                var dl = Model.DanceRatings.Count == 1 ? "Dance: " : "Dances: ";
-                <div class="display-label">
-                    @dl
+        <div class="col-md-12" style="padding-top: 5px">
+            <div class="panel panel-default">
+                <div class="panel-heading">
+                    <h3 class="panel-title">Dances</h3>
                 </div>
-                <div class="display-field">
-                @foreach (var item in Model.DanceRatings)
-                {
-                    var badge = m4dModels.SongCounts.GetRatingBadge(danceMap, item.DanceId, item.Weight);
-                    var name = danceMap[item.DanceId].DanceName;
-                    var tag = danceTags.Contains(name.ToLower()) ? "dance-tag" : string.Empty;
-                    @separator;
-                    <span class="rating @badge @tag">@Html.ActionLink(name, name, "dances")</span>
-                    separator = " ";
-                }
-                </div>
-            }
+                <ul class="panel-body list-group">
+                    @foreach (var item in Model.DanceRatings)
+                    {
+                        var badge = m4dModels.SongCounts.GetRatingBadge(danceMap, item.DanceId, item.Weight);
+                        var name = danceMap[item.DanceId].DanceName;
+                        var max = danceMap[item.DanceId].MaxWeight;
+                        var tag = danceTags.Contains(name.ToLower()) ? "dance-tag" : string.Empty;
+                        var tip = item.Weight + " votes where the top song in the " + name + " category has " + max + " votes.";
+                        <li class="list-group-item"><span class="rating-block @badge @tag" data-toggle="tooltip" data-placement="top" title="@tip"></span>@Html.ActionLink(name, name, "dances")</li>
+                    }
+                </ul>
+            </div>
         </div>
     </div>
 }
@@ -122,26 +110,17 @@
 {
     <div class="row">
         <div class="col-md-12">
-            @if (Model.Albums.Count == 1)
-            {
-                <div class="display-label">
-                    Album:
+            <div class="panel panel-default">
+                <div class="panel-heading">
+                    <h3 class="panel-title">Albums</h3>
                 </div>
-                    @Html.Partial("AlbumDetails", Model.Albums[0]);
-                    <br />
-            }
-            else
-            {
-                <div class="display-label">
-                    Albums:
-                </div>
-                    <ul>
-                        @foreach (var album in Model.Albums)
+                <ul class="panel-body list-group">
+                    @foreach (var album in Model.Albums)
                     {
-                            <li>@Html.Partial("AlbumDetails", album)</li>
+                        <li class="list-group-item">@Html.Partial("AlbumDetails", album)</li>
                     }
-                    </ul>
-            }
+                </ul>
+            </div>
         </div>
     </div>
 }
